wip: Refactor from BUKA to C4T-Ed reader app

--- a/bundle/index.html
+++ b/bundle/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Buka - EBook Management</title>
+    <title>C4T-Ed Reader</title>
     <link rel="stylesheet" href="../assets/css/style.css">    
   </head>
 
