--- a/buka/bundle/index.html
+++ b/buka/bundle/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>C4T-Ed Reader</title>
+    <title>Outernet Reader</title>
     <link rel="stylesheet" href="../assets/css/style.css">    
   </head>
 
